# crazyflie

./: Cargo.toml  README.md  memory.x
examples/: blinky.rs  eeprom.rs  motors.rs  syslink_irq.rs
src/: eeprom.rs  led.rs  lib.rs  motor.rs  uart_syslink.rs
